--- a/playtopia/src/app/core/footer/footer.component.css
+++ b/playtopia/src/app/core/footer/footer.component.css
@@ -5,6 +5,7 @@ footer {
   width: 100%;
   margin-top: auto;
 }
+
 footer p {
-  font-size: 20px;
+  font-size: 16px; /* Reduced for 100% zoom */
 }
