--- a/playtopia/src/app/game/detail/detail.component.css
+++ b/playtopia/src/app/game/detail/detail.component.css
@@ -16,57 +16,57 @@ h3,
 h4,
 h5,
 h6 {
-  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 2px 0 #fff,
-    1px 1px 0 #fff;
+  text-shadow: -0.5px -0.5px 0 #fff, 0.5px -0.5px 0 #fff, -0.5px 1px 0 #fff, 0.5px 0.5px 0 #fff;
   color: #000000;
-  font-size: 70px;
-  margin-bottom: 10px;
+  font-size: 56px; /* Adjusted for 100% zoom */
+  margin-bottom: 8px; /* Adjusted for 100% zoom */
 }
+
 p {
   color: white;
 }
 
 .image img {
-  width: 550px;
-  margin: 80px 100px 100px 200px;
-  box-shadow: 0 0 100px rgba(0, 0, 0, 1);
+  border-radius: 20px;
+  width: 440px; /* Adjusted for 100% zoom */
+  margin: 64px 80px 80px 160px; /* Adjusted for 100% zoom */
+  box-shadow: 0 0 80px rgba(0, 0, 0, 1); /* Adjusted for 100% zoom */
 }
 
 .description {
-  margin: 70px 100px 100px 0px;
-  font-size: 35px;
-  width: 900px;
+  margin: 56px 80px 80px 0px; /* Adjusted for 100% zoom */
+  font-size: 28px; /* Adjusted for 100% zoom */
+  width: 720px; /* Adjusted for 100% zoom */
 }
 
 button {
-  margin: 50px 10px 0px 0px;
-  font-size: 40px;
-  border: 5px solid rgb(0, 0, 0);
-  border-radius: 20px;
+  margin: 40px 8px 0px 0px; /* Adjusted for 100% zoom */
+  font-size: 32px; /* Adjusted for 100% zoom */
+  border: 4px solid rgb(0, 0, 0); /* Adjusted for 100% zoom */
+  border-radius: 16px; /* Adjusted for 100% zoom */
   background-color: #3c5d61;
   color: rgb(255, 255, 255);
   font-family: "Bevan", serif;
-  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 4px 0 #000,
-    2px 2px 0 #000;
+  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 4px 0 #000, 2px 2px 0 #000;
 }
 
 button:hover {
-  border: 5px solid white;
-  text-shadow: -2px -2px 0 #ffffff, 2px -2px 0 #ffffff, -2px 4px 0 #ffffff,
-    2px 2px 0 #ffffff;
+  border: 4px solid white; /* Adjusted for 100% zoom */
+  text-shadow: -2px -2px 0 #ffffff, 2px -2px 0 #ffffff, -2px 4px 0 #ffffff, 2px 2px 0 #ffffff;
   color: #000000;
   cursor: pointer;
 }
+
 button img {
-  width: 40px;
+  width: 32px; /* Adjusted for 100% zoom */
   margin: 0px;
 }
 
 .genre-label {
-  text-shadow: -2px -2px 0 #ffffff, 2px -2px 0 #ffffff, -2px 4px 0 #ffffff,
-    2px 2px 0 #ffffff;
+  text-shadow: -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 2px 0 #ffffff, 1px 1px 0 #ffffff;
   color: #000000;
 }
+
 .button-container {
   display: flex;
   align-items: center; /* Vertically center items */
@@ -74,7 +74,7 @@ button img {
 
 /* Optional: Add some spacing between the buttons */
 .button-container button {
-  margin-right: 10px;
+  margin-right: 8px; /* Adjusted for 100% zoom */
 }
 
 /* Optional: Adjust styles for the like button container */
@@ -83,10 +83,10 @@ button img {
   align-items: center;
 }
 
-.count{
-  padding: 0px 10px 3px 10px;
-  margin: 65px 10px 10px 0px;
-  font-size: 40px;
-  border: 5px solid rgb(0, 0, 0);
-  border-radius: 20px;
+.count {
+  padding: 0px 8px 3px 8px; /* Adjusted for 100% zoom */
+  margin: 52px 8px 8px 0px; /* Adjusted for 100% zoom */
+  font-size: 32px; /* Adjusted for 100% zoom */
+  border: 4px solid rgb(0, 0, 0); /* Adjusted for 100% zoom */
+  border-radius: 16px; /* Adjusted for 100% zoom */
 }
