--- a/playtopia/src/app/game/store/store.component.css
+++ b/playtopia/src/app/game/store/store.component.css
@@ -13,16 +13,16 @@ body {
 
 .search_panel {
   display: flex;
-  border-radius: 10px;
+  border-radius: 8px; /* Reduced border-radius */
 }
 
 .search_panel div {
-  margin: 0px 10px;
+  margin: 0px 8px; /* Reduced margin */
   cursor: pointer;
   color: white;
 }
 .search_panel div {
-  font-size: 30px;
+  font-size: 24px; /* Reduced font-size */
 }
 .search_panel div:hover {
   color: black;
@@ -32,21 +32,22 @@ body {
 }
 
 .search_panel input {
-  font-size: 30px;
+  font-size: 24px; /* Reduced font-size */
   font-family: "Bevan", serif;
   background-color: rgba(10, 2, 34, 0.4);
-  border-radius: 10px;
+  border-radius: 8px; /* Reduced border-radius */
   border: none;
 }
 
 .search_panel button {
-  width: 50px;
-  height: 50px;
-  border-radius: 10px;
+  width: 40px; /* Reduced button width */
+  height: 40px; /* Reduced button height */
+  border-radius: 8px; /* Reduced border-radius */
   cursor: pointer;
   background-color: rgba(10, 2, 34, 0.4);
   color: white;
-  font-size: 30px;
+  font-size: 24px; /* Reduced font-size */
+  margin: 5px;
 }
 
 .other-games-row {
@@ -94,8 +95,9 @@ body {
 }
 .search_bar input {
   color: white;
-  margin-right:10px ;
+  margin:8px 5px 10px 2px;
 }
+
 i img{
   width: 25px;
 }
