--- a/playtopia/src/app/user/login/login.component.css
+++ b/playtopia/src/app/user/login/login.component.css
@@ -15,10 +15,9 @@ main {
 .register_el {
   display: flex;
   align-items: center;
-  border-radius: 30px;
-  /* background-color: #3C5D61; */
-  box-shadow: 10px 20px 50px rgba(0, 0, 0, 0.8);
-  margin: 100px;
+  border-radius: 20px; /* Reduced border radius */
+  box-shadow: 5px 10px 25px rgba(0, 0, 0, 0.8); /* Reduced box shadow */
+  margin: 50px; /* Reduced margin */
 }
 
 .image-el {
@@ -26,14 +25,14 @@ main {
 }
 
 .image-el img {
-  border-radius: 30px;
-  padding: 10px;
-  width: 800px;
-  height: auto;
-  box-shadow: 10px 10px 100px rgba(0, 0, 0, 1);
+  border-radius: 20px; /* Reduced border radius */
+  padding: 5px; /* Reduced padding */
+  width: 600px; /* Reduced image width */
+  height: auto; /* Maintain aspect ratio */
+  box-shadow: 5px 5px 50px rgba(0, 0, 0, 1); /* Reduced box shadow */
 }
 .form_el {
-  margin: 100px 100px 100px;
+  margin: 50px 50px 50px; /* Reduced margin */
 }
 
 form {
@@ -42,27 +41,22 @@ form {
   flex-direction: column;
 }
 
-label {
-  margin-bottom: 5px;
-}
-
 input {
-  font-size: 30px;
+  font-size: 20px;
   border-radius: 10px;
   font-family: "Bevan", serif;
   margin-bottom: 10px;
   border: 4px solid black;
 }
 label {
-  font-size: 30px;
-  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 4px 0 #000,
-    2px 2px 0 #000;
-
+  margin-bottom: 3px; /* Reduced margin */
+  font-size: 25px; /* Reduced font size */
   color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 2px 0 #000,
+    1px 1px 0 #000; /* Added text shadow */
 }
 
 button {
-  margin-top: 20px;
   font-size: 40px;
   margin-bottom: 20px;
   border: 5px solid rgb(0, 0, 0);
@@ -81,10 +75,14 @@ button:hover {
 }
 
 p {
-  font-size: 30px;
+  font-size: 25px;
+  margin-right: 39px;
   color: white;
   text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 4px 0 #000,
     2px 2px 0 #000;
+}
+#register_p {
+  display: inline;
 }
 
 #register_p:hover {
