Replaced "Cart is empty" text with a png

--- a/playtopia/src/app/game/cart/cart.component.html
+++ b/playtopia/src/app/game/cart/cart.component.html
@@ -19,7 +19,7 @@
   </div>
   <hr />
   <div class="empty_cart" *ngIf="cartGames.length === 0">
-    <h2>Cart is empty!</h2>
+    <img id="noItemsImg" src="../../../assets/NoItems.png" alt="No Items Yet">
     <hr />
   </div>
   <div class="total">
