toFixed func and Css changes

--- a/playtopia/src/app/game/cart/cart.component.html
+++ b/playtopia/src/app/game/cart/cart.component.html
@@ -23,6 +23,6 @@
     <hr />
   </div>
   <div class="total">
-    <h2>Total: {{ totalPrice }} $</h2>
+    <h2>Total: {{ totalPrice.toFixed(2) }} $</h2>
   </div>
 </div>
