--- a/playtopia/src/app/shared/modal/modal.component.html
+++ b/playtopia/src/app/shared/modal/modal.component.html
@@ -1,1 +1,10 @@
-<p>modal works!</p>
+<div class="modal">
+  <div class="modal-content">
+    <p>Are you sure you want to delete this game?</p>
+    <div class="buttons">
+
+      <button>Delete</button>
+      <button>Cancel</button>
+    </div>
+  </div>
+</div>
