--- a/playtopia/src/app/shared/modal/modal.component.css
+++ b/playtopia/src/app/shared/modal/modal.component.css
@@ -1,7 +1,15 @@
 .modal {
   display: flex;
   justify-content: center;
+  align-items: center; /* Center vertically */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
   animation: fadeInModal 1.5s ease;
+
 }
 
 .modal-content {
@@ -11,7 +19,8 @@
   background-image: url("../../../assets/BackGroud.png");
   border-radius: 20px;
   padding: 50px;
-  box-shadow: 0 0 80px rgba(0, 0, 0, 1)
+  box-shadow: 0 0 80px rgba(0, 0, 0, 1);
+  border: 10px solid #2D474A;
 }
 
 .buttons {
