--- a/playtopia/src/app/shared/modal/modal.component.html
+++ b/playtopia/src/app/shared/modal/modal.component.html
@@ -1,10 +1,9 @@
 <div class="modal">
   <div class="modal-content">
-    <p>Are you sure you want to delete this game?</p>
+    <p>Are you sure you want to remove this game?</p>
     <div class="buttons">
-
-      <button>Delete</button>
-      <button>Cancel</button>
+      <button (click)="modalShowResults('remove')">Remove</button>
+      <button (click)="modalShowResults('cancel')">Cancel</button>
     </div>
   </div>
 </div>
