--- a/playtopia/src/app/game/detail/detail.component.html
+++ b/playtopia/src/app/game/detail/detail.component.html
@@ -1,5 +1,8 @@
 <body>
   <main *ngIf="game">
+    <ng-container *ngIf="isShown">
+      <app-modal (modalClosed)="onModalClosed($event)" [isShown]="true"></app-modal>
+    </ng-container>
     <div class="image">
       <img [src]="game.game_img" [alt]="game.game_name" />
     </div>
